Move to Vitejs for dev and build

--- a/form.html
+++ b/form.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <link href='/image/client_logo.jpg' rel='shortcut icon' type='image/jpg'>
-    
-    <script type="module" crossorigin src="/assets/app-83e36a83.js"></script>
-    <link rel="stylesheet" href="/assets/app-a4cbd595.css">
+    <link rel="stylesheet" href="src/css/app.css" />
   </head>
   <body class="page-thing">
     <!-- NAV -->
@@ -113,6 +111,6 @@
     <!-- for building css -->
     <div class="text-red-500"></div>
     <div class="text-indigo-500"></div>
-    
+    <script type="module" src="src/js/app.js"></script>
   </body>
 </html>
