--- a/login.html
+++ b/login.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <link href='/image/client_logo.jpg' rel='shortcut icon' type='image/jpg'>
-    
-    <link rel="stylesheet" href="/assets/app-a4cbd595.css">
+    <link rel="stylesheet" href="src/css/app.css" />
   </head>
   <body>
     <div class="fixed flex justify-center items-center top-0 left-0 bottom-0 right-0 bg-no-repeat bg-cover" style="background-image: url(/image/login_cover.jpg);">
