--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='/image/client_logo.jpg' rel='shortcut icon' type='image/jpg'>
-    
-    <script type="module" crossorigin src="/assets/app-83e36a83.js"></script>
-    <link rel="stylesheet" href="/assets/app-a4cbd595.css">
+    <link rel="stylesheet" href="./src/css/app.css" />
   </head>
   <body class="page-thing">
     <!-- NAV -->
@@ -70,6 +68,6 @@
         </div>
       </div>
     </div>
-    
+    <script type="module" src="./src/js/app.js"></script>
   </body>
 </html>
